@@ -11,7 +11,7 @@ The Easy Publish and Consume library provides an easy method to:
     * find that information
     * and finally consume it
 
-You can use this library as hash table published to the network,
+You can use this library as key/value store published to the network,
 using encryption, authentication and service discovery.
 
 REQUIREMENTS
